--- a/settings.template.json
+++ b/settings.template.json
@@ -63,8 +63,13 @@
     }
   ],
   "powershell_packages" : [
-    "poshgit",
-    "z"
+    {
+      "name": "poshgit",
+    },
+    {
+      "name": "z",
+      "parameters": "-AllowClobber"
+    }
   ],
   "visual_studio_code_extensions" : [
     "streetsidesoftware.code-spell-checker",
