--- a/configuration/Nuget/NuGet.Config
+++ b/configuration/Nuget/NuGet.Config
@@ -2,7 +2,7 @@
 <configuration>
   <packageSources>
     <add key="Microsoft Visual Studio Offline Packages" value="C:\Program Files (x86)\Microsoft SDKs\NuGetPackages\" />
-    <add key="levelup-private" value="https://www.myget.org/F/levelup-private/auth/98a679fe-4551-47d0-ab6b-e524ed4a8082/api/v3/index.json" />
+    <add key="levelup-private" value="" />
     <add key="levelup-public" value="https://www.myget.org/F/levelup/api/v3/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
